fixed header z-index on desktop, added template preview

--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -124,7 +124,7 @@
     .header
         @include pos(relative)
         @include size(100%, 120px)
-        z-index: 1
+        z-index: 2
         max-height: 120px
 
         &__wrapper
