--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@
     left: unset;
     width: 100%;
     height: 120px;
-    z-index: 1;
+    z-index: 2;
     max-height: 120px;
   }
   .header__wrapper {
